[package]
name = "protondb-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
clap_derive = "4.5.11"
colored = "2.1.0"
futures = "0.3.30"
image = "0.24"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.1", features = ["rt", "rt-multi-thread", "macros"] }
viuer = "0.7.1"
